--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-        uses: gabrielfalcao/pyenv-action@v9
+      - uses: actions/checkout@v2
+      - uses: gabrielfalcao/pyenv-action@v9
         with:
           default: "${{ matrix.python }}"
 
