--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  ubuntu:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
@@ -33,5 +33,25 @@ jobs:
       - uses: gabrielfalcao/pyenv-action@v9
         with:
           default: "${{ matrix.python }}"
+
+      - run: make test
+
+  macos:
+    # The type of runner that the job will run on
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python:
+          - 3.7.12
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - run: brew install pyenv
+      - run: pyenv install "${{ matrix.python }}"
 
       - run: make test
