Revert "Attempt cache fix"
This reverts commit fb96f4f4f915a9a3aa889927bb6d80f84038587c.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - uses: ursetto/pyenv-action@cache-fix
+      - uses: gabrielfalcao/pyenv-action@v9
         with:
           default: "${{ matrix.python }}"
 
