--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
       matrix:
         python:
           - 3.7.12
+        installer:
+          - pyenv
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -34,7 +36,7 @@ jobs:
         with:
           default: "${{ matrix.python }}"
 
-      - run: make test
+      - run: ./test/run_test.sh "${{ matrix.installer }}"
 
   macos:
     # The type of runner that the job will run on
@@ -43,6 +45,9 @@ jobs:
       matrix:
         python:
           - 3.7.12
+        installer:
+          - pyenv
+          - homebrew
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -54,4 +59,4 @@ jobs:
       - run: brew install pyenv
       - run: pyenv install "${{ matrix.python }}"
 
-      - run: make test
+      - run: ./test/run_test.sh "${{ matrix.installer }}"
