--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,7 @@ jobs:
         with:
           submodules: recursive
 
-      - if: matrix.installer == "pyenv"
-        run: |
+      - run: |
           brew install pyenv
           pyenv install "${{ matrix.python }}"
 
