--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,5 +59,6 @@ jobs:
       - run: |
           brew install pyenv
           pyenv install "${{ matrix.python }}"
+        if: matrix.installer == 'pyenv'
 
       - run: ./test/run_test.sh "${{ matrix.installer }}"
