--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           default: "${{ matrix.python }}"
 
-      - run: ./test/run_test.sh "${{ matrix.installer }}"
+      - run: ./runtest.sh "${{ matrix.installer }}"
 
   macos:
     # The type of runner that the job will run on
@@ -59,4 +59,4 @@ jobs:
       - run: brew install pyenv
         if: matrix.installer == 'pyenv'
 
-      - run: ./test/run_test.sh "${{ matrix.installer }}"
+      - run: ./runtest.sh "${{ matrix.installer }}"
