--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,3 +63,6 @@ jobs:
         if: matrix.installer == 'pyenv'
 
       - run: ./runtest.sh test/test_functions.sh --filter "${{ matrix.installer }}"
+        env:
+          BATS_MOCK_HOMEBREW: 0
+          BATS_MOCK_PYENV: 0
