--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [main]
   pull_request:
@@ -13,22 +9,15 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   ubuntu:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python:
           - "3.9.10"
-        installer:
-          - pyenv
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
           submodules: recursive
@@ -36,33 +25,60 @@ jobs:
         with:
           default: "${{ matrix.python }}"
 
-      - run: ./runtest.sh test/test_functions.sh --filter "${{ matrix.installer }}"
+      - name: Show bash version
+        run: bash --version
 
-  macos:
-    # The type of runner that the job will run on
+      - name: Test functions with pyenv
+        run: ./runtest.sh test/test_functions.sh --filter "PYENV"
+
+      - name: Test commands
+        run: ./runtest.sh test/test_commands.sh
+
+  macos-homebrew:
     runs-on: macos-latest
     strategy:
       matrix:
         python:
           - "3.9.10"
-        installer:
-          - pyenv
-          - homebrew
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
           submodules: recursive
 
-      - run: brew install pyenv
-        if: matrix.installer == 'pyenv'
+      - name: Show bash version
+        run: bash --version
 
-      - run: pyenv install "${{ matrix.python }}"
-        if: matrix.installer == 'pyenv'
-
-      - run: ./runtest.sh test/test_functions.sh --filter "${{ matrix.installer }}"
+      - name: Test functions with homebrew
+        run: ./runtest.sh test/test_functions.sh --filter "HOMEBREW"
         env:
           BATS_MOCK_HOMEBREW: 0
+
+      - name: Test commands
+        run: ./runtest.sh test/test_commands.sh
+
+  macos-pyenv:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python:
+          - "3.9.10"
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Install pyenv
+        run: brew install pyenv
+
+      - name: Install Python ${{ matrix.python }} with pyenv
+        run: pyenv install "${{ matrix.python }}"
+
+      - name: Test functions with pyenv
+        run: ./runtest.sh test/test_functions.sh --filter "PYENV"
+        env:
           BATS_MOCK_PYENV: 0
+
+      - name: Test commands
+        run: ./runtest.sh test/test_commands.sh
