--- a/.releaserc.json
+++ b/.releaserc.json
@@ -41,7 +41,7 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["src/dpv"],
+        "assets": ["src/dpv", "README.md"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
